# restaurant360

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: pom.xml
backend/src/main/java/com/abwcurious/restaurant/: RestaurantApplication.java
backend/src/main/resources/db/migration/: V10__saas_enterprise_extensions.sql  V11__rls_login_bypass_policy.sql  V12__rls_super_admin_bypass.sql  V13__increase_brand_field_lengths.sql  V14__increase_outlet_field_lengths.sql  V15__add_brand_compliance_documents.sql  V16__add_performance_indexes.sql  V17__force_row_level_security.sql  V18__make_customers_tenant_aware.sql  V1__init_schema.sql  V2__seed_data.sql  V3__erp_tables_and_floors.sql  V4__seed_waiter_user.sql  V5__saas_multi_tenant_rls.sql  V6__saas_enhancements.sql  V7__add_category_to_ingredients.sql  V8__create_ingredient_categories_table.sql  V9__add_outlet_settings_fields.sql
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Sidebar.css  Sidebar.tsx  TopBar.css  TopBar.tsx
src/pages/: AIChatbot.css  AIChatbot.tsx  CRM.css  CRM.tsx  Dashboard.css  Dashboard.tsx  Inventory.css  Inventory.tsx  KitchenDisplay.css  KitchenDisplay.tsx  Login.css  Login.tsx  MenuManagement.css  MenuManagement.tsx  POS.css  POS.tsx  Portfolio.css  Portfolio.tsx  Reports.css  Reports.tsx  Settings.css  Settings.tsx  SuperAdmin.css  SuperAdmin.tsx  SuperAdminLayout.css  SuperAdminLayout.tsx  TableManagement.css  TableManagement.tsx
src/services/: api.ts
src/store/: authStore.ts
(+140 files in other folders)
