[package]
name = "restaurant360"
version = "1.0.0"
description = "Restaurant360 POS & Restaurant Management Platform"
authors = ["Rahul Shah"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
